Tillater at eksternbruker endrer sluttdato for medisinsk behandling også når aktiviteten er avtalt